# iconforge

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/PRD/: 产品需求文档 (PRD)：IconForge.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  models.rs
src-tauri/src/commands/: config.rs  convert.rs  edit.rs  export.rs  extract.rs  generate.rs  history.rs  mod.rs
src-tauri/src/data/: templates.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/services/: convert.rs  export.rs  extract.rs  image.rs  mod.rs  remove_bg.rs  storage.rs
src/api/: client.ts
src/router/: index.ts
src/stores/: workspace.ts
src/views/: EditView.vue  ExtractView.vue  GenerateView.vue  HistoryView.vue  Image2IcoView.vue  SettingsView.vue
